# d2x-xl

./: .clang-format  .gitignore  CMakeLists.txt  resource.h
2d/: canvas.cpp  font.cpp  pcx.cpp  poly.cpp  scalec.cpp  string.cpp
3d/: buildmodel.cpp  draw.cpp  globvars.cpp  interp.cpp  oof2model.cpp  pof2model.cpp  points.cpp  transformation.cpp
VC10/: d2x-xl.sln  d2x-xl.vcproj  d2x-xl.vcxproj  d2x-xl.vcxproj.filters
VC14/: d2x-xl.sln  d2x-xl.vcxproj  resource1.h
VC9/: Source1.cpp  d2x-xl.rc  d2x-xl.sln  d2x-xl.vcproj
VC9/libmve/: libmve-vc7.vcproj  libmve-vc8.vcproj
ai/: ai.cpp  aiboss.cpp  aiinit.cpp  ailib.cpp  escort.cpp
audio/: audio.cpp  objectaudio.cpp  songs.cpp  soundthreads.cpp
audio/linux/: alsadigi.cpp  hmiplay.cpp  midi.cpp
audio/win32/: midi.cpp
cockpit/: crosshairs.cpp  gauges.cpp  genericcockpit.cpp  genericdrawers.cpp  hud.cpp  targetindicators.cpp  utilities.cpp
console/: console.cpp  cvar.cpp
d2x-trackir/: d2x-trackir.vcproj  d2x-trackir.vcxproj  trackir.c  trackir.h
d2x-trackir/VC9/: d2x-trackir-vc7.vcproj
effects/: fireball.cpp  glare.cpp  glow-new.cpp  lightning_emitter.cpp  lightning_node.cpp  newlightning.cpp  particle_buffer.cpp  particle_emitter.cpp  particle_images.cpp  particle_manager.cpp  particle_shader.cpp  particle_system.cpp  particles.cpp  postprocessing.cpp  postprocessing.h  shrapnel.cpp  sparkeffect.cpp
game/2d/: bitblt.cpp  bitmap.cpp  canvas.cpp  clip.h  font.cpp  ibitblt.cpp  palette.cpp  pcx.cpp  pixel.cpp  rle.cpp  scalea.h  scalec.cpp  string.cpp  tmerge.cpp
game/3d/: ase2model.cpp  buildmodel.cpp  draw.cpp  fastmodels.cpp  globvars.cpp  globvars.h  hitbox.cpp  interp.cpp  matrix.cpp  oof2model.cpp  pof2model.cpp  points.cpp  rod.cpp  setup.cpp  shadows.cpp  transformation.cpp
game/ai/: ai.cpp  aianimate.cpp  aiboss.cpp  aifire.cpp  aiframe.cpp  aiinit.cpp  ailib.cpp  aimove.cpp  aipath.cpp  aisave.cpp  aisnipe.cpp  d1_ai.cpp  escort.cpp  thief.cpp
game/audio/: audio.cpp  audio.h  hmpfile.cpp  hmpfile.h  midi.cpp  midi.h  objectaudio.cpp  songs.cpp  songs.h  soundthreads.cpp  soundthreads.h
game/cockpit/: cockpit.cpp  cockpitdata.cpp  crosshairs.cpp  genericcockpit.cpp  genericdrawers.cpp  hud.cpp  hudicons.cpp  hudmsgs.cpp  statusbar.cpp  targetindicators.cpp  utilities.cpp
game/console/: console.cpp  cvar.cpp
game/d2x-trackir/: d2x-trackir.vcxproj.filters  trackir.c  trackir.h
game/effects/: fireball.cpp  glare.cpp  glow.cpp  glow.h  lightning.cpp  lightning_emitter.cpp  lightning_manager.cpp  lightning_node.cpp  objsmoke.cpp  omega_lightning.cpp  particle_buffer.cpp  particle_emitter.cpp  particle_images.cpp  particle_manager.cpp  particle_shader.cpp  particle_system.cpp  (+6 more)
gameio/: IpToCountry.cpp  addon_bitmaps.cpp  hoard.cpp  loadgame.cpp  loadgeometry.cpp  loadmodeldata.cpp  loadobjects.cpp  loadsounds.cpp  loadtextures.cpp  mission.cpp  paging.cpp  piggy.cpp  playerprofile.cpp  savegame.cpp  tga.cpp
gamemodes/: entropy.cpp
include/: Simplex.h  ai.h  aistruct.h  audio.h  canvas.h  carray.h  cfile.h  cockpit.h  config.h  cquicksort.h  createmesh.h  crypt.h  cstring.h  d_io.h  descent.h  dialheap.h  effects.h  error.h  findpath.h  fireweapon.h  game.h  gameargs.h  glew.h  gpgpu_lighting.h  gr.h  iff.h  ipx_udp_lib.h  laser.h  loadgamedata.h  maths.h  network.h  network_lib.h  network_thread.h  ogl_defs.h  ogl_lib.h  ogl_shader.h  oglmatrix.h  oof.h  palette.h  piggy.h  (+11 more)
input/: event.cpp  input.cpp  joy.cpp  key.cpp  mouse.cpp  sixense_wrapper.cpp  systemkeys.cpp
io/: args.cpp  cfile.cpp  d_io.cpp  hogfile.cpp
libmve/: mvelib.cpp  mveplay.cpp
libmve-new/: mveplay.cpp
libmve-old/: decoders.h  mve_audio.cpp  mvelib.h  mveplay.cpp
lighting/: grayscaleshaders.cpp  headlight.cpp  light.cpp  lightmap.cpp  lightmapshaders.cpp  lightprecalc.cpp  lightshaders.cpp
main/: briefings.cpp  cmd.cpp  cntrlcen.cpp  config.cpp  credits.cpp  crypt.cpp  descent.cpp  dropobject.cpp  findpath.cpp  findsegment.cpp  flightpath.cpp  game.cpp  gameargs.cpp  gamecntl.cpp  gamedata.cpp  gamefolders.cpp  gameoptions.cpp  gameseg.cpp  gamestates.cpp  highscores.cpp  inferno.cpp  joydefs.cpp  kconfig.cpp  mglobal.cpp  movie.cpp  newdemo.cpp  producers.cpp  scores.cpp  segmath.cpp  setup.cpp  side.cpp  skybox.cpp  slew.cpp  terrain.cpp  update.cpp  vclip.cpp
maths/: Simplex.cpp  tables.cpp
mem/: mem.cpp
menus/: cockpitmenu.cpp  configmenu.cpp  effectsmenu.cpp  fileselector.cpp  gameplaymenu.cpp  inputdevicemenu.cpp  listbox.cpp  mainmenu.cpp  menu.cpp  miscmenu.cpp  msgbox.cpp  netgamebrowser.cpp  netgamehelp.cpp  netgameinfo.cpp  netmenu.cpp  netplayerbrowser.cpp  newgamemenu.cpp  physicsmenu.cpp  rendermenu.cpp  screenresmenu.cpp  soundmenu.cpp
misc/: carray.cpp  error.cpp  hash.cpp
models/: aseread.cpp  hiresmodels.cpp  oofmath.cpp  oofread.cpp  polymodel.cpp
network/: autodl.cpp  banlist.cpp  mpstatus.cpp  multi.cpp  multibot.cpp  multimsg.cpp  netmisc-new.cpp  netmisc-old.cpp  network.cpp  network_init.cpp  network_sync.cpp  network_thread.cpp  tracker.cpp  udp_interface.cpp
objects/: boss.cpp  criticalhit.cpp  hostage.cpp  marker.cpp  object.cpp  object_physics.cpp  objectio.cpp  player.cpp  playerdeath.cpp  powerup.cpp  robot.cpp  updateobject.cpp
ogl/: clientstates.cpp  drawbuffer.cpp  fbuffer.cpp  flushbuffers.cpp  glew.cpp  gr.cpp  ogl_blur.cpp  ogl_hudstuff.cpp  ogl_lib.cpp  ogl_palette.cpp  ogl_render.cpp  ogl_shader.cpp  ogl_texcache.cpp  ogl_texture.cpp  pbuffer.cpp  rendertextures.cpp  screenshot.cpp  sdlgl.cpp  shadowmap.cpp  stereo.cpp
physics/: hitbox_collision.cpp  physics.cpp  slowmotion.cpp  sphere_collision.cpp
render/: automap.cpp  morph.cpp  objrender.cpp  oofrender.cpp  polymodelrender.cpp  radar.cpp  render.cpp  render_lighting.cpp  renderframe.cpp  rendermine.cpp  rendersetup.cpp  renderthreads.cpp  visculling.cpp
resources/: d2x-xl.rc  resource.h
setup/: D2X-XL Data Setup.sln  D2X-XL-Setup 32 bit.sln  D2X-XL-Setup 64 bit.sln
src/: conf.h
weapons/: controlweapon.cpp  fusion.cpp  pickupweapon.cpp  seismic.cpp  weapon.cpp  weaponhandlers.cpp  weaponorder.cpp
(+511 files in other folders)
